--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -406,7 +406,7 @@ button.disabled {
     border-radius: 20px;
     box-shadow: 0px 0px 20px 5px #000000;
     max-height: 850px;
-    transform: translateY(-120%);
+    pointer-events: none;
 }
 
 .privacy-and-policy-agreement .heading {
@@ -912,48 +912,35 @@ button.disabled {
 .home .contacts-modal .table .info-wrap {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     border-top: 1px solid #C4C4C4;
-}
-
-.home .contacts-modal .table .info-wrap .info {
-    width: 50%;
-}
-
-.home .contacts-modal .table .info-wrap .info div {
-    padding: 10px 0 10px 15px;
-    border: 1px solid #C4C4C4;
-    border-left: none;
     word-break: break-all;
 }
 
-.home .contacts-modal .table .info-wrap .info div:last-of-type {
+.home .contacts-modal .table .info-wrap .information {
+    display: flex;
+    justify-content: space-between;
+}
+
+.home .contacts-modal .table .info-wrap .information:last-of-type > div {
     border-bottom: none;
 }
 
-.home .contacts-modal .table .info-wrap .info .email {
-    height: 90px;
-    display: flex;
-    align-items: center;
-}
-
-.home .contacts-modal .table .info-wrap .values {
-    width: 50%;
-}
-
-.home .contacts-modal .table .info-wrap .values div {
-    padding: 10px 0;
+.home .contacts-modal .table .info-wrap .information div {
     border: 1px solid #C4C4C4;
-    border-right: none;
-}
-
-.home .contacts-modal .table .info-wrap .values div:last-of-type {
-    border-bottom: none;
-}
-
-.home .contacts-modal .table .info-wrap .values .email {
-    height: 90px;
+    width: 50%;
+    padding: 10px 7px;
     display: flex;
     align-items: center;
+}
+
+.home .contacts-modal .table .info-wrap .information div:first-of-type {
+    border-left: none;
+    padding: 10px 15px;
+}
+
+.home .contacts-modal .table .info-wrap .information div:last-of-type {
+    border-right: none;
 }
 
 .dashboard {
