some adjustments are added

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -4951,6 +4951,14 @@ button.disabled {
     margin-top: 15px;
 }
 
+.choosing-cost-modal .choose-cost .calc-cost .dropdown .items .item {
+    background-color: rgb(40, 40, 60);
+}
+
+.choosing-cost-modal .choose-cost .calc-cost .dropdown .items .item:hover {
+    background-color: rgb(50, 50, 80);
+}
+
 .choosing-cost-modal .choose-cost .buy-product {
     border-radius: 10px;
     background-color: #1E75FF;
@@ -8215,7 +8223,7 @@ button.disabled {
     padding-left: 10px;
     width: 100%;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 18px;
     letter-spacing: .1px;
 }
@@ -8265,6 +8273,11 @@ button.disabled {
 .admin-panel .edit-product .editing-product-form .change-product .upper-block-field .input-wrap .field {
     border: none;
     height: 100%;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .upper-block-field .input-wrap .per-day {
+    min-width: 70px;
+    text-align: center;
 }
 
 .admin-panel .edit-product .editing-product-form .change-product .buttons .button {
