--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1859,6 +1859,12 @@ button.disabled {
     transition: 200ms;
 }
 
+.dashboard .main .products .product .buttons .button.disabled {
+    background-color: #DFDFDF;
+    color: #9F9F9F;
+    pointer-events: none;
+}
+
 .dashboard .main .products .product .buttons button:hover {
     background-color: #1C6FF2;
 }
@@ -2048,6 +2054,7 @@ button.disabled {
     border-radius: 10px;
     background: transparent;
     width: 165px;
+    word-wrap: break-word;
 }
 
 .info .product .general-info .info-title {
@@ -2161,11 +2168,9 @@ button.disabled {
     align-items: flex-end;
 }
 
-.info .product .main .actions .undetect {
-    background-color: #82C43C26;
+.info .product .main .actions .status-button {
     border: none;
     padding: 10px 20px;
-    color: #82C43C;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
@@ -2176,9 +2181,24 @@ button.disabled {
     line-height: 18px;
 }
 
-.info .product .main .actions .undetect .ellipse {
+.info .product .main .actions .status-button .ellipse {
     width: 10px;
     height: 10px;
+}
+
+.info .product .main .actions .status-button.undetect {
+    background-color: #82C43C26;
+    color: #82C43C;
+}
+
+.info .product .main .actions .status-button.onupdate {
+    background-color: #FFC54226;
+    color: #FFC542;
+}
+
+.info .product .main .actions .status-button.detect {
+    background-color: #FC5A5A26;
+    color: #FC5A5A
 }
 
 .info .product .main .actions .last-update {
@@ -2326,6 +2346,12 @@ button.disabled {
 
 .info .product .general .cost .button .buy-button:hover {
     background-color: #1C6FF2;
+}
+
+.info .product .general .cost .button .buy-button.disabled {
+    background-color: #DFDFDF;
+    color: #9F9F9F;
+    pointer-events: none;
 }
 
 .info {
@@ -2510,6 +2536,12 @@ button.disabled {
     border: none;
     cursor: pointer;
     transition: 200ms;
+}
+
+.dashboard .main .product-info .popular-products .popular-product .buttons .button.disabled {
+    background-color: #DFDFDF;
+    color: #9F9F9F;
+    pointer-events: none;
 }
 
 .home .forgot-password-modal .forgot-password .reset-password:hover {
@@ -3929,21 +3961,10 @@ button.disabled {
     margin: 0 auto;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     height: 100%;
-    pointer-events: none;
-}
-
-.choosing-cost-modal .choose-cost .product-title {
-    pointer-events: all;
 }
 
 .choosing-cost-modal .choose-cost .calc-cost {
-    pointer-events: all;
     margin-top: 15px;
 }
 
@@ -3968,7 +3989,6 @@ button.disabled {
     line-height: 18px;
     cursor: pointer;
     margin-top: 15px;
-    pointer-events: all;
 }
 
 .choosing-cost-modal .choose-cost .buy-product:hover {
@@ -7222,10 +7242,66 @@ button.disabled {
     font-size: 14px;
     line-height: 18px;
     letter-spacing: .1px;
+    background-color: #FAFAFB;
+    border: none;
 }
 
 .admin-panel .edit-product .editing-product-form .change-product .field-wrap.description-field {
     margin-top: 25px;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap {
+    display: flex;
+    background-color: #FAFAFB;
+    border-radius: 5px;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap {
+    display: flex;
+    align-items: center;
+    min-width: 50%;
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap .choose-day {
+    cursor: pointer;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap .arrow {
+    width: 10px;
+    height: 8px;
+    filter: invert(0.6);
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap .choose-day-dropdown {
+    color: #1C1C24;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 31px;
+    left: 0;
+    width: 100%;
+    background-color: #FAFAFB;
+    flex-direction: column;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    transition: 100ms;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap .choose-day-dropdown .time {
+    width: 100%;
+    height: 30px;
+    padding-left: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.admin-panel .edit-product .editing-product-form .change-product .field-wrap .edit-time-wrap .choose-day-wrap .choose-day-dropdown .time:hover {
+    color: #FAFAFB;
+    background-color: #1C1C24;
 }
 
 .admin-panel .edit-product .editing-product-form .change-product .description-field .field {
