--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2161,7 +2161,7 @@ button.disabled {
     display: flex;
     align-items: center;
     margin-left: 10px;
-    width: 220px;
+    width: 250px;
     text-align: center;
 }
 
@@ -2171,6 +2171,7 @@ button.disabled {
     color: #92929D;
     line-height: 14px;
     margin-left: 5px;
+    min-width: 190px;
 }
 
 .info .product .main .actions {
@@ -4424,31 +4425,50 @@ button.disabled {
 
 .admin-panel .statistics .graphs .graph {
     width: calc(var(--tab-width) * 2 + 15px);
+    margin-top: var(--graph-margin-top);
     background-color: #1C1C24;
     color: #fff;
-    border-radius: 12px;
-    margin-top: var(--graph-margin-top);
 }
 
 .graph {
     padding: 20px;
     font-size: 13px;
-    /* height: 580px; */
+    height: 280px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    border-radius: 12px;
+}
+
+.graph .graph-theme {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+}
+
+.graph .graph-theme .graph-color {
+    width: 15px;
+    height: 15px;
+}
+
+.graph .left-indicators {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: -5px;
+    padding-right: 5px;
+    border-right: 1px solid #fff;
+    height: 100%;
 }
 
 .graph .graph-wrap {
     display: flex;
     justify-content: space-between;
-}
-
-.graph .graph-wrap .left-indicators {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    position: absolute;
+    height: 100%;
+    position: relative;
 }
 
 .graph .graph-wrap .column-statistics {
@@ -4467,13 +4487,14 @@ button.disabled {
 .graph .graph-wrap .column-statistics .graph-item .graph-column {
     width: 15px;
     cursor: pointer;
+    transition: transform 300ms ease-in 3s;
 }
 
-.graph .graph-wrap .column-statistics .graph-item .graph-date.hovered {
+.graph .graph-wrap .column-statistics .graph-item .graph-value.hovered {
     opacity: 1;
 }
 
-.graph .graph-wrap .column-statistics .graph-item .graph-date {
+.graph .graph-wrap .column-statistics .graph-item .graph-value {
     opacity: 0;
     position: absolute;
     pointer-events: none;
@@ -8086,4 +8107,122 @@ button.disabled {
 
 .admin-panel .product-news .news-wrap .product .buttons .button.delete-all-news:hover {
     background-color: #1C6FF2;
+}
+
+.admin-panel .settings {
+    position: relative;
+    padding: var(--padding-top-page) 0 calc(var(--padding-top-page) * 2);
+}
+
+@media (max-width: 1341px) {
+    .admin-panel .settings .products-action {
+        margin: 0 auto;
+    }
+}
+
+.admin-panel .settings h2 {
+    text-align: center;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 700;
+    letter-spacing: .1px;
+}
+
+.admin-panel .settings .settings-wrap {
+    transition: 300ms;
+    opacity: 0;
+    max-width: 1160px;
+    margin: 20px auto 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.admin-panel .settings .loader-action {
+    display: flex;
+    flex-direction: column;
+    width: 270px;
+}
+
+.admin-panel .settings .loader-action .action {
+    margin-top: 25px;
+}
+
+.admin-panel .settings .products-action {
+    display: flex;
+    max-width: 860px;
+}
+
+.admin-panel .settings .products-action .edit-products {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.admin-panel .settings .products-action .edit-products .product {
+    width: 270px;
+    margin-left: 20px;
+    background-color: #1C1C24;
+    border: 1px solid #292932;
+    border-radius: 20px;
+    padding: 15px;
+    margin-top: 25px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.admin-panel .settings .products-action .edit-products .product:first-of-type {
+    margin-left: 0;
+}
+
+.admin-panel .settings .products-action .edit-products .product:nth-child(3n + 4) {
+    margin-left: 0;
+}
+
+.admin-panel .settings .products-action .edit-products .product h3 {
+    text-align: center;
+}
+
+.admin-panel .settings .products-action .edit-products .product .button {
+    background-color: #FF00006E;
+    width: 100%;
+    padding: 10px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #fff;
+    transition: 300ms;
+    margin-top: 20px;
+    position: relative;
+}
+
+.admin-panel .settings .products-action .edit-products .product .button:hover {
+    background-color: #92191978;
+}
+
+.admin-panel .settings .products-action .edit-products .product .upload-bg .select-file {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.admin-panel .settings .products-action .edit-products .product .field-wrap {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.admin-panel .settings .products-action .edit-products .product .field-wrap .field {
+    border-radius: 5px;
+    height: 30px;
+    color: #1C1C24;
+    padding-left: 10px;
+    border: none;
 }
